--- a/IT_tech_cybersecurity_references.html
+++ b/IT_tech_cybersecurity_references.html
@@ -79,11 +79,11 @@
 <!--body class = "main-text"-->
     <div class = "main-text">
 
-        <p>Cimpanu C (2019) Australian tech unicorn Canva suffers security breach, ZDNet website, accessed 9 July 2022.<a href ="https://www.zdnet.com/article/australian-tech-unicorn-canva-suffers-security-breach/">https://www.zdnet.com/article/australian-tech-unicorn-canva-suffers-security-breach/"</a></p>
+        <p>Cimpanu C (2019) Australian tech unicorn Canva suffers security breach, ZDNet website, accessed 9 July 2022.<a href ="https://www.zdnet.com/article/australian-tech-unicorn-canva-suffers-security-breach/">https://www.zdnet.com/article/australian-tech-unicorn-canva-suffers-security-breach/</a></p>
 
-        <p>Gartner (2021) Gartner forecasts worldwide security and risk management spending to exceed $150 billion in 2021, Gartner website, accessed 8 July 2022.<a href ="https://www.wired.com/story/google-free-security-keys-campaigns/">https://www.wired.com/story/google-free-security-keys-campaigns/"</a></p>
+        <p>Gartner (2021) Gartner forecasts worldwide security and risk management spending to exceed $150 billion in 2021, Gartner website, accessed 8 July 2022.<a href ="https://www.wired.com/story/google-free-security-keys-campaigns/">https://www.wired.com/story/google-free-security-keys-campaigns/</a></p>
 
-        <p>Johnstone M (10 August 2016) ‘Did the census really suffer a denial-of-service ‘attack’’, The Conversation, accessed 10 July 2021<a href ="https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755">https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755"</a></p>
+        <p>Johnstone M (10 August 2016) ‘Did the census really suffer a denial-of-service ‘attack’’, The Conversation, accessed 10 July 2021.<a href ="https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755">https://theconversation.com/did-the-census-really-suffer-a-denial-of-service-attack-63755"</a></p>
 
         <p>Morgan S (2020) Cybercrime to cost the world $10.5 trillion annually by 2025, Cybersecurity ventures website, accessed 9 July 2021.<a href ="https://cybersecurityventures.com/cybercrime-damages-6-trillion-by-2021/">https://cybersecurityventures.com/cybercrime-damages-6-trillion-by-2021/"</a></p>
 
