updated refreences clouds

--- a/IT_tech_clouds_references.html
+++ b/IT_tech_clouds_references.html
@@ -80,19 +80,19 @@
 <!--body class = "main-text"-->
     <div class = "main-text">
 
-    <p>Amazon (n.d.) Sustainability in the cloud, About Amazon website, accessed 13 July 2022<a href ="https://sustainability.aboutamazon.com/environment/the-cloud">https://sustainability.aboutamazon.com/environment/the-cloud"</a></p>
+    <p>Amazon (n.d.) Sustainability in the cloud, About Amazon website, accessed 13 July 2022. <a href ="https://sustainability.aboutamazon.com/environment/the-cloud">https://sustainability.aboutamazon.com/environment/the-cloud"</a></p>
 
-    <p>Amazon Staff (2022) Amazon extends position as world’s largest buyer of renewable energy, About Amazon website, accessed 13 July 2022, <a href = "https://www.aboutamazon.com/news/sustainability/amazon-extends-position-as-worlds-largest-corporate-buyer-of-renewable-energy">https://www.aboutamazon.com/news/sustainability/amazon-extends-position-as-worlds-largest-corporate-buyer-of-renewable-energy</a></p>
+    <p>Amazon Staff (2022) Amazon extends position as world’s largest buyer of renewable energy, About Amazon website, accessed 13 July 2022. <a href = "https://www.aboutamazon.com/news/sustainability/amazon-extends-position-as-worlds-largest-corporate-buyer-of-renewable-energy">https://www.aboutamazon.com/news/sustainability/amazon-extends-position-as-worlds-largest-corporate-buyer-of-renewable-energy</a></p>
 
-    <p>AWS (Amazon Web Services) (n.d.) Our Data Centers, AWS website, accessed accessed 13 July 2022<a href ="https://aws.amazon.com/compliance/data-center/data-centers/">https://aws.amazon.com/compliance/data-center/data-centers/"</a></p>
+    <p>AWS (Amazon Web Services) (n.d.) Our Data Centers, AWS website, accessed accessed 13 July 2022. <a href ="https://aws.amazon.com/compliance/data-center/data-centers/">https://aws.amazon.com/compliance/data-center/data-centers/"</a></p>
 
-    <p>Chai W (2021) cloud computing, TechTarget website, accessed 13 July 2022<a href ="https://www.techtarget.com/searchcloudcomputing/definition/cloud-computing">https://www.techtarget.com/searchcloudcomputing/definition/cloud-computing"</a></p>
+    <p>Chai W (2021) cloud computing, TechTarget website, accessed 13 July 2022. <a href ="https://www.techtarget.com/searchcloudcomputing/definition/cloud-computing">https://www.techtarget.com/searchcloudcomputing/definition/cloud-computing"</a></p>
 
-    <p>Dvorin T (2021) Collaboration, Consistency and the Future of Cloud Computing, unbound security website, accessed 13 July 2022<a href ="https://www.unboundsecurity.com/blog/evolution-and-future-of-cloud/">https://www.unboundsecurity.com/blog/evolution-and-future-of-cloud/"</a></p>
+    <p>Dvorin T (2021) Collaboration, Consistency and the Future of Cloud Computing, unbound security website, accessed 13 July 2022. <a href ="https://www.unboundsecurity.com/blog/evolution-and-future-of-cloud/">https://www.unboundsecurity.com/blog/evolution-and-future-of-cloud/"</a></p>
 
-    <p>Hopping C (2022) What is Virtualisation?, ITPro website, accessed 13 July 2022<a href ="https://www.itpro.co.uk/612016/what-is-virtualisation">https://www.itpro.co.uk/612016/what-is-virtualisation"</a></p>
+    <p>Hopping C (2022) What is Virtualisation?, ITPro website, accessed 13 July 2022. <a href ="https://www.itpro.co.uk/612016/what-is-virtualisation">https://www.itpro.co.uk/612016/what-is-virtualisation"</a></p>
 
-    <p>Watts S and Raza M (2019) SaaS vs PaaS vs IaaS: What’s The Difference And How To Choose, bmc website, accessed 13 July 2022<a href ="https://www.bmc.com/blogs/saas-vs-paas-vs-iaas-whats-the-difference-and-how-to-choose/">https://www.bmc.com/blogs/saas-vs-paas-vs-iaas-whats-the-difference-and-how-to-choose/"</a></p>
+    <p>Watts S and Raza M (2019) SaaS vs PaaS vs IaaS: What’s The Difference And How To Choose, bmc website, accessed 13 July 2022. <a href ="https://www.bmc.com/blogs/saas-vs-paas-vs-iaas-whats-the-difference-and-how-to-choose/">https://www.bmc.com/blogs/saas-vs-paas-vs-iaas-whats-the-difference-and-how-to-choose/"</a></p>
 
 
 <br>
