--- a/IT_tech_machinelearning_references.html
+++ b/IT_tech_machinelearning_references.html
@@ -78,31 +78,31 @@
 <!--body class = "main-text"-->
     <div class = "main-text">
 
-    <p>BBC (12 March 2016) ‘Artificial intelligence: Google’s AlphaGo beats Go master Lee Se-dol', BBC News, accessed 5 July 2022.<a href ="https://www.bbc.com/news/technology-35785875">https://www.bbc.com/news/technology-35785875"</a></p>
+    <p>BBC (12 March 2016) ‘Artificial intelligence: Google’s AlphaGo beats Go master Lee Se-dol', BBC News, accessed 5 July 2022. <a href ="https://www.bbc.com/news/technology-35785875">https://www.bbc.com/news/technology-35785875"</a></p>
 
-    <p>GitHub (2022) GitHub Copilot, your AI pair programmer, GitHub website, accessed 5 July 2022.<a href = "https://github.com/features/copilot">https://github.com/features/copilot</a></p>
+    <p>GitHub (2022) GitHub Copilot, your AI pair programmer, GitHub website, accessed 5 July 2022. <a href = "https://github.com/features/copilot">https://github.com/features/copilot</a></p>
 
-    <p>Gladstone N (4 November 2018) ‘Surveillance state: NSW intensifies citizen tracking’, Sydney Morning Herald, accessed 5 July 2022.<a href = "https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html">https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html </a></p>
+    <p>Gladstone N (4 November 2018) ‘Surveillance state: NSW intensifies citizen tracking’, Sydney Morning Herald, accessed 5 July 2022. <a href = "https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html">https://www.smh.com.au/national/nsw/surveillance-state-nsw-intensifies-citizen-tracking-20181019-p50atw.html </a></p>
 
     <p>May M (2021) ‘Eight ways machine learning is assisting medicine’, Nature Medicine, 27(2-3) <a href = "https://doi.org/10.1038/s41591-020-01197-2">https://doi.org/10.1038/s41591-020-01197-2</a></p>
 
-    <p>Mythic (2022) Power-efficient AI acceleration for the edge, Mythic website, accessed 5 July 2022.<a href = "https://mythic.ai/">https://mythic.ai/</a></p>
+    <p>Mythic (2022) Power-efficient AI acceleration for the edge, Mythic website, accessed 5 July 2022. <a href = "https://mythic.ai/">https://mythic.ai/</a></p>
 
-    <p>Muller D (1 March 2022) ‘Future computers will be radically different’, Veritasium, YouTube website, accessed 5 July 2022.<a href = "https://www.youtube.com/watch?v=GVsUOuSjvcg&ab_channel=Veritasium">https://www.youtube.com/watch?v=GVsUOuSjvcg&ab_channel=Veritasium</a></p>
+    <p>Muller D (1 March 2022) ‘Future computers will be radically different’, Veritasium, YouTube website, accessed 5 July 2022. <a href = "https://www.youtube.com/watch?v=GVsUOuSjvcg&ab_channel=Veritasium">https://www.youtube.com/watch?v=GVsUOuSjvcg&ab_channel=Veritasium</a></p>
 
-    <p>OpenAI (2022a) OpenAI API, OpenAI website, accessed 7 July 2022.<a href = "https://openai.com/api/">https://openai.com/api/</a></p>
+    <p>OpenAI (2022a) OpenAI API, OpenAI website, accessed 7 July 2022. <a href = "https://openai.com/api/">https://openai.com/api/</a></p>
 
-    <p>OpenAI (2022b) OpenAI playground, OpenAI website, accessed 7 July 2022.<a href = "https://beta.openai.com/playground/">https://beta.openai.com/playground/</a></p>
+    <p>OpenAI (2022b) OpenAI playground, OpenAI website, accessed 7 July 2022. <a href = "https://beta.openai.com/playground/">https://beta.openai.com/playground/</a></p>
 
-    <p>OpenAI (2022c) Dall-E 2, OpenAI website, accessed 5 July 2022.<a href = "https://openai.com/dall-e-2/">https://openai.com/dall-e-2/</a></p>
+    <p>OpenAI (2022c) Dall-E 2, OpenAI website, accessed 5 July 2022. <a href = "https://openai.com/dall-e-2/">https://openai.com/dall-e-2/</a></p>
 
-    <p>Purtill J (29 May 2022) ‘Danny’s workmate is called GPT-3. You’ve probably read its work without realising it’s an AI’, ABC News, accessed 5 July 2022<a href = "https://www.abc.net.au/news/science/2022-05-29/artificial-intelligence-rise-of-text-generation-gpt-3/101101804"> https://www.abc.net.au/news/science/2022-05-29/artificial-intelligence-rise-of-text-generation-gpt-3/101101804</a></p>
+    <p>Purtill J (29 May 2022) ‘Danny’s workmate is called GPT-3. You’ve probably read its work without realising it’s an AI’, ABC News, accessed 5 July 2022. <a href = "https://www.abc.net.au/news/science/2022-05-29/artificial-intelligence-rise-of-text-generation-gpt-3/101101804"> https://www.abc.net.au/news/science/2022-05-29/artificial-intelligence-rise-of-text-generation-gpt-3/101101804</a></p>
 
-    <p>Silver D, Huang A, Maddison CJ, Guez A, Sifre L, Driessche G, Schrittwieser J, Antonoglou I, Panneershelvam V, Lanctot M, Dieleman S, Grewe D, Nham J, Kalchbrenner N, Sutskever I, Lillicrap T, Leach M, Kavukcuoglu K, Graepel T and Hassabis D (2016) ‘Mastering the game of Go with deep neural networks and tree search’, Nature, 529:484-489,<a href = "https://storage.googleapis.com/deepmind-media/alphago/AlphaGoNaturePaper.pdf">https://storage.googleapis.com/deepmind-media/alphago/AlphaGoNaturePaper.pdf</a></p>
+    <p>Silver D, Huang A, Maddison CJ, Guez A, Sifre L, Driessche G, Schrittwieser J, Antonoglou I, Panneershelvam V, Lanctot M, Dieleman S, Grewe D, Nham J, Kalchbrenner N, Sutskever I, Lillicrap T, Leach M, Kavukcuoglu K, Graepel T and Hassabis D (2016) ‘Mastering the game of Go with deep neural networks and tree search’, Nature, 529:484-489. <a href = "https://storage.googleapis.com/deepmind-media/alphago/AlphaGoNaturePaper.pdf">https://storage.googleapis.com/deepmind-media/alphago/AlphaGoNaturePaper.pdf</a></p>
 
-    <p>Silver D, Hubert T, Schrittwieser J, Antonogluo I, Lai, M, Guez A, Lanctot M, Sifre L, Kumaran D, Graepel T, Lillicrap T, Simonyan K and Hassabis D (2018) ‘A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play', Science, 362(6419):1140-1144,<a href = "https://doi.org/10.1126/science.aar6404">https://doi.org/10.1126/science.aar6404</a></p>
+    <p>Silver D, Hubert T, Schrittwieser J, Antonogluo I, Lai, M, Guez A, Lanctot M, Sifre L, Kumaran D, Graepel T, Lillicrap T, Simonyan K and Hassabis D (2018) ‘A general reinforcement learning algorithm that masters chess, shogi, and Go through self-play', Science, 362(6419):1140-1144. <a href = "https://doi.org/10.1126/science.aar6404">https://doi.org/10.1126/science.aar6404</a></p>
 
-    <p>Silver D, Schrittwieser J, Simonyan K, Antonoglou I, Huang A, Guez A, Hubert T, Baker L, Lai M, Bolton A, Chen Y, Lillicrap T, Hui F, Sifre L, Driessche G, Graepel T and Hassabis D (2017) ‘Mastering the game of Go without human knowledge’, Nature, 550:354-359<a href = "https://doi.org/10.1038/nature24270">https://doi.org/10.1038/nature24270</a></p>
+    <p>Silver D, Schrittwieser J, Simonyan K, Antonoglou I, Huang A, Guez A, Hubert T, Baker L, Lai M, Bolton A, Chen Y, Lillicrap T, Hui F, Sifre L, Driessche G, Graepel T and Hassabis D (2017) ‘Mastering the game of Go without human knowledge’, Nature, 550:354-359. <a href = "https://doi.org/10.1038/nature24270">https://doi.org/10.1038/nature24270</a></p>
 
 <br>
 </div>    <!--footer-->
