updated project idea references

--- a/Project_idea_references.html
+++ b/Project_idea_references.html
@@ -81,21 +81,21 @@
 <!--body class = "main-text"-->
     <div class = "main-text">
 
-        <p>Amazon Web Services (n.d.) AWS Pricing Calculator, accessed 13 July 2022.<a href = "https://calculator.aws/ ">https://calculator.aws/ </a></p>
+        <p>Amazon Web Services (n.d.) AWS Pricing Calculator, accessed 13 July 2022. <a href = "https://calculator.aws/ ">https://calculator.aws/ </a></p>
 
-        <p>Apple Developer (n.d.) Enrollment, accessed 13 July 2022.<a href = "https://developer.apple.com/support/enrollment/">https://developer.apple.com/support/enrollment/</a></p>
+        <p>Apple Developer (n.d.) Enrollment, accessed 13 July 2022. <a href = "https://developer.apple.com/support/enrollment/">https://developer.apple.com/support/enrollment/</a></p>
 
-        <p>Apple Developer (n.d.) Xcode 14 Overview, accessed 13 July 2022.<a href = "https://developer.apple.com/xcode/">https://developer.apple.com/xcode/</a></p>
+        <p>Apple Developer (n.d.) Xcode 14 Overview, accessed 13 July 2022. <a href = "https://developer.apple.com/xcode/">https://developer.apple.com/xcode/</a></p>
 
-        <p>CWANZ (Cycling and Walking Australia and New Zealand) (2021) National Walking and Cycling Participation Survey 2021, CWANZ website, accessed 11 July 2022.<a href = "https://www.cwanz.com.au/national-walking-and-cycling-participation-survey-2021/">https://www.cwanz.com.au/national-walking-and-cycling-participation-survey-2021/</a></p>
+        <p>CWANZ (Cycling and Walking Australia and New Zealand) (2021) National Walking and Cycling Participation Survey 2021, CWANZ website, accessed 11 July 2022. <a href = "https://www.cwanz.com.au/national-walking-and-cycling-participation-survey-2021/">https://www.cwanz.com.au/national-walking-and-cycling-participation-survey-2021/</a></p>
 
-        <p>Demchenko M (2020) The best tools for Android software development, ncube website, accessed 13 July 2022.<a href = "https://ncube.com/blog/the-best-tools-for-android-software-development">https://ncube.com/blog/the-best-tools-for-android-software-development</a></p>
+        <p>Demchenko M (2020) The best tools for Android software development, ncube website, accessed 13 July 2022. <a href = "https://ncube.com/blog/the-best-tools-for-android-software-development">https://ncube.com/blog/the-best-tools-for-android-software-development</a></p>
 
-        <p>Google Cloud (n.d.) Google Cloud Pricing Calculator, accessed 13 July 2022.<a href = "https://cloud.google.com/products/calculator/"2>https://cloud.google.com/products/calculator/</a></p>
+        <p>Google Cloud (n.d.) Google Cloud Pricing Calculator, accessed 13 July 2022. <a href = "https://cloud.google.com/products/calculator/"2>https://cloud.google.com/products/calculator/</a></p>
 
-        <p>Google Play Console Help (n.d.) How to use Play Console, accessed 13 July 2022<a href = "https://support.google.com/googleplay/android-developer/answer/6112435">https://support.google.com/googleplay/android-developer/answer/6112435</a></p>
+        <p>Google Play Console Help (n.d.) How to use Play Console, accessed 13 July 2022. <a href = "https://support.google.com/googleplay/android-developer/answer/6112435">https://support.google.com/googleplay/android-developer/answer/6112435</a></p>
 
-        <p>Pearson L and Beck B (2022) 3 in 4 people want to ride a bike but are put off by lack of safe lanes, The Conversation website, accessed 11 July 2022<a href = "https://theconversation.com/3-in-4-people-want-to-ride-a-bike-but-are-put-off-by-lack-of-safe-lanes-172868">https://theconversation.com/3-in-4-people-want-to-ride-a-bike-but-are-put-off-by-lack-of-safe-lanes-172868</a></p>
+        <p>Pearson L and Beck B (2022) 3 in 4 people want to ride a bike but are put off by lack of safe lanes, The Conversation website, accessed 11 July 2022. <a href = "https://theconversation.com/3-in-4-people-want-to-ride-a-bike-but-are-put-off-by-lack-of-safe-lanes-172868">https://theconversation.com/3-in-4-people-want-to-ride-a-bike-but-are-put-off-by-lack-of-safe-lanes-172868</a></p>
 
 <br>
     </div>
