Updated robots references
final commit!  YAA

--- a/IT_tech_robots_references.html
+++ b/IT_tech_robots_references.html
@@ -78,19 +78,19 @@
 <!--body class = "main-text"-->
     <div class = "main-text">
 
-    <p>Ackerman E (2021) A Robot For The Worst Job In The Warehouse, IEEE Spectrum website, accessed 5 July 2022<a href ="https://spectrum.ieee.org/warehouse-robot">https://spectrum.ieee.org/warehouse-robot"</a></p>
+    <p>Ackerman E (2021) A Robot For The Worst Job In The Warehouse, IEEE Spectrum website, accessed 5 July 2022. <a href ="https://spectrum.ieee.org/warehouse-robot">https://spectrum.ieee.org/warehouse-robot"</a></p>
 
-    <p>Ackerman E (2021) Astrobee Will Find Astronauts’ Lost Socks, IEEE Spectrum website, accessed 5 July 2022.<a href = "https://spectrum.ieee.org/astrobee-nasa-gateway">https://spectrum.ieee.org/astrobee-nasa-gateway</a></p>
+    <p>Ackerman E (2021) Astrobee Will Find Astronauts’ Lost Socks, IEEE Spectrum website, accessed 5 July 2022. <a href = "https://spectrum.ieee.org/astrobee-nasa-gateway">https://spectrum.ieee.org/astrobee-nasa-gateway</a></p>
 
-    <p>Guizzo E (2018) Types of Robots, IEEE Robots website, accessed 5 July 2022<a href = "https://robots.ieee.org/learn/types-of-robots/">https://robots.ieee.org/learn/types-of-robots/</a></p>
+    <p>Guizzo E (2018) Types of Robots, IEEE Robots website, accessed 5 July 2022. <a href = "https://robots.ieee.org/learn/types-of-robots/">https://robots.ieee.org/learn/types-of-robots/</a></p>
 
-    <p>Guizzo E (2018) What Is a Robot?, IEEE Robots website, accessed 5 JUly 2022<a href = "https://robots.ieee.org/learn/what-is-a-robot/">https://robots.ieee.org/learn/what-is-a-robot/</a></p>
+    <p>Guizzo E (2018) What Is a Robot?, IEEE Robots website, accessed 5 JUly 2022. <a href = "https://robots.ieee.org/learn/what-is-a-robot/">https://robots.ieee.org/learn/what-is-a-robot/</a></p>
 
-    <p>Kanis S (2022) What is Astrobee? NASA website, accessed 5 July 2022<a href = "https://www.nasa.gov/astrobee">https://www.nasa.gov/astrobee</a></p>
+    <p>Kanis S (2022) What is Astrobee? NASA website, accessed 5 July 2022. <a href = "https://www.nasa.gov/astrobee">https://www.nasa.gov/astrobee</a></p>
 
-    <p>Roser R (2019) The Inner Workings of Amazon Fulfilment Centers – Part 1, AllAboutLean website, accessed 5 July 2022<a href = "https://www.allaboutlean.com/amazon-fulfillment-1/">https://www.allaboutlean.com/amazon-fulfillment-1/</a></p>
+    <p>Roser R (2019) The Inner Workings of Amazon Fulfilment Centers – Part 1, AllAboutLean website, accessed 5 July 2022. <a href = "https://www.allaboutlean.com/amazon-fulfillment-1/">https://www.allaboutlean.com/amazon-fulfillment-1/</a></p>
 
-    <p>Tavares F (2022) Nasa Celebrates Three Years of Astrobees Buzzing on Space Station, NASA website, accessed 5 July 2022<a href = "https://www.nasa.gov/feature/ames/astrobee-3-years">https://www.nasa.gov/feature/ames/astrobee-3-years</a></p>
+    <p>Tavares F (2022) Nasa Celebrates Three Years of Astrobees Buzzing on Space Station, NASA website, accessed 5 July 2022. <a href = "https://www.nasa.gov/feature/ames/astrobee-3-years">https://www.nasa.gov/feature/ames/astrobee-3-years</a></p>
     
 <br>
 </div>    <!--footer-->
